created aktivitets overview and logged in page
